converting existing projects

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=user
 spring.datasource.password=adimin123
-spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
+spring.datasource.url=jdbc:mysql://165.227.76.226:3306/photo_app
 spring.jpa.hibernate.ddl-auto=update
 spring.freemarker.template-loader-path: classpath:/templates
 spring.freemarker.suffix:.ftl
