--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.sardorbek.projects.mini</groupId>
 	<artifactId>crudapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>crudapp</name>
 	<description>Demo project for Spring Boot</description>
 
